--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -79,7 +79,7 @@ CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
-#CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+#CONFIG_PACKAGE_luci-app-jd-dailybonus=y#
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-openclash=y
@@ -89,11 +89,11 @@ CONFIG_PACKAGE_luci-app-pushbot=y
 CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y#
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y#
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=y#
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server is not set
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y#
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-udpxy=y
@@ -130,7 +130,7 @@ CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_pptpd=y
-CONFIG_PACKAGE_qos-scripts=y
+CONFIG_PACKAGE_eqos-scripts=y
 CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_rp-pppoe-common=y
 CONFIG_PACKAGE_rp-pppoe-relay=y
@@ -146,11 +146,11 @@ CONFIG_PACKAGE_ruby-psych=y
 CONFIG_PACKAGE_ruby-stringio=y
 CONFIG_PACKAGE_ruby-strscan=y
 CONFIG_PACKAGE_ruby-yaml=y
-#CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-#CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-#CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
+#CONFIG_PACKAGE_shadowsocks-libev-ss-local=y#
+#CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y#
+#CONFIG_PACKAGE_shadowsocks-libev-ss-server=y#
 #CONFIG_PACKAGE_shadowsocks-rust-ssserver is not set
-#CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+#CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y#
 CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_sqm-scripts=y
