--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -100,7 +100,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
-CONFIG_PACKAGE_luci-app-uugamebooster=y
+#CONFIG_PACKAGE_luci-app-uugamebooster=y#
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 CONFIG_PACKAGE_luci-app-wifischedule=y
 #CONFIG_PACKAGE_luci-app-wireguard=y#
