--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -160,9 +160,9 @@ CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_udpxy=y
-CONFIG_PACKAGE_uugamebooster=y
+#CONFIG_PACKAGE_uugamebooster=y#
 CONFIG_PACKAGE_v2ray-plugin=y
-# CONFIG_PACKAGE_vsftpd-alt is not set
+#CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_wifischedule=y
 #CONFIG_PACKAGE_wireguard-tools=y#
 CONFIG_boost-compile-visibility-hidden=y
