--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -87,7 +87,6 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-pppoe-relay=y
 CONFIG_PACKAGE_luci-app-pptp-server=y
 #CONFIG_PACKAGE_luci-app-pushbot=y#
-CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
@@ -124,6 +123,8 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 #CONFIG_PACKAGE_luci-proto-wireguard=y#
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_mwan3=y
+CONFIG_PACKAGE_advancedsetting=y
+CONFIG_PACKAGE_eqos=y
 CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_ntpclient=y
