--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -9,6 +9,8 @@ CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y
 CONFIG_NODEJS_14=y
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
 # CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
 # CONFIG_PACKAGE_adbyby is not set
