--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -79,8 +79,8 @@ CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-advancedsetting=y
 CONFIG_PACKAGE_luci-app-easymesh=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-frps=y
+#CONFIG_PACKAGE_luci-app-frpc=y#
+#CONFIG_PACKAGE_luci-app-frps=y#
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 #CONFIG_PACKAGE_luci-app-jd-dailybonus=y#
 CONFIG_PACKAGE_luci-app-mwan3=y
