--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -25,8 +25,8 @@ CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_dnsforwarder=y
 CONFIG_PACKAGE_dnsproxy=y
-CONFIG_PACKAGE_frpc=y
-CONFIG_PACKAGE_frps=y
+#CONFIG_PACKAGE_frpc=y#
+#CONFIG_PACKAGE_frps=y#
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
