--- a/AX3600_AP.config
+++ b/AX3600_AP.config
@@ -63,6 +63,7 @@ CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-eqos=y
+CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
