--- a/AX3600_AP.config
+++ b/AX3600_AP.config
@@ -11,6 +11,8 @@ CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
 # CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
 # CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_zram-swap=y
+CONFIG_PROCD_ZRAM_TMPFS=y
 CONFIG_PACKAGE_batctl-default=y
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-program_options=y
@@ -39,6 +41,7 @@ CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
