--- a/AX3600_DCJ.config
+++ b/AX3600_DCJ.config
@@ -16,6 +16,8 @@ CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
 # CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_zram-swap=y
+ CONFIG_PROCD_ZRAM_TMPFS=y
 CONFIG_PACKAGE_batctl-default=y
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
@@ -36,6 +38,7 @@ CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_kcptun-client=y
 CONFIG_PACKAGE_kcptun-config=y
 CONFIG_PACKAGE_kmod-batman-adv=y
+CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
 CONFIG_PACKAGE_kmod-crypto-kpp=y
 CONFIG_PACKAGE_kmod-crypto-lib-blake2s=y
